<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/image_illustration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="130dp"
        android:src="@drawable/get_started_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="46dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:letterSpacing="0"
                android:lineHeight="28sp"
                android:text="@string/get_started_welcome"
                android:textColor="#13231B"
                android:textFontWeight="400"
                android:textSize="28sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:letterSpacing="0"
                android:lineHeight="28sp"
                android:text="@string/app_name"
                android:textColor="#13231B"
                android:textFontWeight="600"
                android:textSize="28sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_identify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0"
            android:lineHeight="22sp"
            android:text="@string/get_started_identify"
            android:textColor="#B313231B"
            android:textFontWeight="400"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <!-- Get Started Button -->
    <Button
        android:id="@+id/button_get_started"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="74dp"
        android:background="@drawable/bg_get_started_button"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/get_started_button"
        android:textColor="@color/white"
        android:textFontWeight="600"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- By Tapping Text -->
    <TextView
        android:id="@+id/text_by_tapping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:letterSpacing="0"
        android:lineHeight="15sp"
        android:text="@string/get_started_by_tapping"
        android:textAlignment="center"
        android:textColor="#B2597165"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>